Bump version to 1.0.4